Making window HTML lighter

--- a/home/templates/home/gallery.html
+++ b/home/templates/home/gallery.html
@@ -78,18 +78,18 @@
     </div>
   </div>
 
-  <div id="jsConfirm" class="transition">
-    <div class="title row">
-      <a class="jsConfirmClose icon right" href="#"></a>
+  <div id="jsConfirm">
+    <div class="title">
+      <a class="jsConfirmClose icon" href="#"></a>
       <h1 class="text">Delete Image</h1>
     </div>
-    <div class="description row text-center">
-      <h1>Are you sure you want to delete <span>iPhone5S.jpg</span>?</h1>
+    <div class="description">
+      Are you sure you want to delete <span>iPhone5S.jpg</span>?
     </div>
-    <div class="buttons row">
-      <a class="cancel jsConfirmClose text-center" href="#">Cancel</a><a id="jsConfirmProceed" class="proceed text-center" href="#">Delete file</a>
+    <div class="buttons">
+      <a class="cancel jsConfirmClose" href="#">Cancel</a><a id="jsConfirmProceed" class="proceed" href="#">Delete file</a>
     </div>
   </div>
-  <div id="jsConfirmBackground" class="jsConfirmClose transition"></div>
+  <div id="jsConfirmBackground" class="jsConfirmClose"></div>
 
 {% endblock %}
