Making window HTML lighter 2

--- a/home/templates/home/gallery.html
+++ b/home/templates/home/gallery.html
@@ -79,13 +79,9 @@
   </div>
 
   <div id="jsConfirm">
-    <div class="title">
-      <a class="jsConfirmClose icon" href="#"></a>
-      <h1 class="text">Delete Image</h1>
-    </div>
-    <div class="description">
-      Are you sure you want to delete <span>iPhone5S.jpg</span>?
-    </div>
+    <a class="jsConfirmClose icon" href="#"></a>
+    <div class="title">Delete Image</div>
+    <div class="description">Are you sure you want to delete <span>iPhone5S.jpg</span>?</div>
     <div class="buttons">
       <a class="cancel jsConfirmClose" href="#">Cancel</a><a id="jsConfirmProceed" class="proceed" href="#">Delete file</a>
     </div>
