Allowing TurboLinks and simplifying initialization

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,5 +7,10 @@
   <div id="index">
     <h2>Welcome to jsConfirm</h2>
     <h3>Let's build a better world together</h3>
+</br>
+</br>
+</br>
+<a href="{% url 'home:gallery' %}">Go to galllery</a>
+
   </div>
 {% endblock %}
