--- a/djangodemo/jsConfirm/static_source/scss/jsConfirm/_settings.scss
+++ b/djangodemo/jsConfirm/static_source/scss/jsConfirm/_settings.scss
@@ -48,10 +48,11 @@
     normal  // font-style
 );
 
-$black: #000;
-$white: #fff;
-$gray: #494C4C;
-$red: #E34F4F;
+$jsConfirm-black: #000;
+$jsConfirm-white: #fff;
+$jsConfirm-gray: #494C4C;
+$jsConfirm-red: #E34F4F;
+$jsConfirm-hover: #E7E7E7;
 
-$window-border-color: #263545;
-$inner-border-color: #C4CACC;
+$jsConfirm-window-border-color: #263545;
+$jsConfirm-inner-border-color: #C4CACC;
