--- a/djangodemo/jsConfirm/static/css/app.css
+++ b/djangodemo/jsConfirm/static/css/app.css
@@ -730,7 +730,7 @@ SOFTWARE.
 #jsConfirm {
   font-family: "Proxima Nova", Helvetica, sans-serif;
   position: absolute;
-  width: 24.8rem;
+  width: 90%;
   top: -30rem;
   background: #fff;
   z-index: 100000000000;
@@ -779,18 +779,17 @@ SOFTWARE.
 /* line 91, ../../static_source/scss/jsConfirm/_core.scss */
 #jsConfirm .description {
   color: #494C4C;
-  padding: 3rem 0;
-  padding-bottom: 3rem;
+  padding: 3rem 1rem;
   border-top: 0.1rem solid #C4CACC;
   border-bottom: 0.1rem solid #C4CACC;
   text-align: center;
 }
-/* line 99, ../../static_source/scss/jsConfirm/_core.scss */
+/* line 98, ../../static_source/scss/jsConfirm/_core.scss */
 #jsConfirm .description span {
   display: inline-block;
   font-family: "Proxima Nova Semibold";
 }
-/* line 107, ../../static_source/scss/jsConfirm/_core.scss */
+/* line 106, ../../static_source/scss/jsConfirm/_core.scss */
 #jsConfirm .buttons a {
   box-sizing: border-box;
   width: 50%;
@@ -801,16 +800,23 @@ SOFTWARE.
   padding: 1.4rem 0;
   margin-bottom: 0.08rem;
 }
-/* line 118, ../../static_source/scss/jsConfirm/_core.scss */
+/* line 117, ../../static_source/scss/jsConfirm/_core.scss */
 #jsConfirm .buttons .proceed {
   color: #E34F4F;
   border-left: 0.1rem solid #C4CACC;
 }
 
-/* line 125, ../../static_source/scss/jsConfirm/_core.scss */
+/* line 124, ../../static_source/scss/jsConfirm/_core.scss */
 .notransition {
   -moz-transition: none, !important;
   -o-transition: none, !important;
   -webkit-transition: none, !important;
   transition: none !important;
+}
+
+@media only screen and (min-width: 40.0001rem) {
+  /* line 129, ../../static_source/scss/jsConfirm/_core.scss */
+  #jsConfirm {
+    width: 24.8rem;
+  }
 }
