Web css improvements

--- a/djangodemo/home/templates/home/gallery.html
+++ b/djangodemo/home/templates/home/gallery.html
@@ -2,9 +2,10 @@
 {% load staticfiles %}
 
 {% block title %}jsConfirm | Welcome{% endblock %}
+{% block body_id %}gallery{% endblock %}
 
 {% block content %}
-  <div id="gallery">
+  <div class="content">
     <div class="row">
       <h2>Gallery</h2>
       <div class="small-12 medium-6 large-4 columns">
