--- a/djangodemo/home/templates/home/index.html
+++ b/djangodemo/home/templates/home/index.html
@@ -2,15 +2,17 @@
 {% load staticfiles %}
 
 {% block title %}jsConfirm | Welcome{% endblock %}
+{% block body_id %}index{% endblock %}
 
 {% block content %}
-  <div id="index">
-    <h2>Welcome to jsConfirm</h2>
-    <h3>Let's build a better world together</h3>
-</br>
-</br>
-</br>
-<a href="{% url 'home:gallery' %}">Go to galllery</a>
-
+  <div class="content">
+    <div class="row">
+	    <h2>Welcome to jsConfirm</h2>
+	    <h3>Let's build a better world together</h3>
+		</br>
+		</br>
+		</br>
+		<a href="{% url 'home:gallery' %}">Go to galllery</a>
+	  </div>
   </div>
 {% endblock %}
