--- a/djangodemo/jsConfirm/static/css/app.css
+++ b/djangodemo/jsConfirm/static/css/app.css
@@ -512,18 +512,19 @@ a {
 
 /* line 27, ../../static_source/scss/web/_header.scss */
 header {
-  position: absolute;
+  position: fixed;
+  top: 0;
   z-index: 100000;
   width: 100%;
   background: rgba(0, 0, 0, 0.5);
   color: #EBEBEB;
   font-size: 0.8rem;
 }
-/* line 35, ../../static_source/scss/web/_header.scss */
+/* line 36, ../../static_source/scss/web/_header.scss */
 header .top-bar ul {
   display: inline-block;
 }
-/* line 39, ../../static_source/scss/web/_header.scss */
+/* line 40, ../../static_source/scss/web/_header.scss */
 header .logo {
   width: 8rem;
   height: 2.1rem;
@@ -541,7 +542,7 @@ footer {
   color: #EBEBEB;
   font-size: 0.8rem;
   padding: 0.3rem 0 0.6rem 0;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
@@ -562,52 +563,53 @@ footer .logo {
 /* line 25, ../../static_source/scss/web/_index.scss */
 #index {
   background: #4299D4;
-  position: absolute;
   height: 100%;
   width: 100%;
 }
 
 /* line 25, ../../static_source/scss/web/_gallery.scss */
 #gallery {
-  padding: 4rem 0;
   background: #A5B3BC;
-  position: absolute;
   height: 100%;
   width: 100%;
 }
-/* line 32, ../../static_source/scss/web/_gallery.scss */
+/* line 30, ../../static_source/scss/web/_gallery.scss */
+#gallery .content {
+  padding: 4rem 0;
+}
+/* line 34, ../../static_source/scss/web/_gallery.scss */
 #gallery .picture {
   background: #fff;
   margin: 1rem 0.2rem;
 }
-/* line 37, ../../static_source/scss/web/_gallery.scss */
+/* line 39, ../../static_source/scss/web/_gallery.scss */
 #gallery .picture img {
   width: 100%;
   padding: 0.2rem 0.2rem 0 0.2rem;
 }
-/* line 42, ../../static_source/scss/web/_gallery.scss */
+/* line 44, ../../static_source/scss/web/_gallery.scss */
 #gallery .picture .description {
   margin: 1.5rem 0;
 }
-/* line 46, ../../static_source/scss/web/_gallery.scss */
+/* line 48, ../../static_source/scss/web/_gallery.scss */
 #gallery .picture .buttons {
   padding: 0;
 }
-/* line 49, ../../static_source/scss/web/_gallery.scss */
+/* line 51, ../../static_source/scss/web/_gallery.scss */
 #gallery .picture .buttons a {
   width: 100%;
   text-align: center;
   display: block;
   padding: 0.4rem 0;
 }
-/* line 63, ../../static_source/scss/web/_gallery.scss */
+/* line 65, ../../static_source/scss/web/_gallery.scss */
 #gallery .heart {
   position: relative;
   width: 1.25rem;
   height: 1.125rem;
   display: inline-block;
 }
-/* line 69, ../../static_source/scss/web/_gallery.scss */
+/* line 71, ../../static_source/scss/web/_gallery.scss */
 #gallery .heart:before, #gallery .heart:after {
   position: absolute;
   content: "";
@@ -629,7 +631,7 @@ footer .logo {
   -o-transform-origin: 0 100%;
   transform-origin: 0 100%;
 }
-/* line 92, ../../static_source/scss/web/_gallery.scss */
+/* line 94, ../../static_source/scss/web/_gallery.scss */
 #gallery .heart:after {
   left: 0;
   -webkit-transform: rotate(45deg);
