--- a/djangodemo/jsConfirm/static_source/scss/web/_footer.scss
+++ b/djangodemo/jsConfirm/static_source/scss/web/_footer.scss
@@ -3,7 +3,7 @@ footer {
     color: $clear-gray;
     font-size: 0.8rem;
     padding: 0.3rem 0 0.6rem 0;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
