--- a/djangodemo/jsConfirm/static_source/scss/web/_header.scss
+++ b/djangodemo/jsConfirm/static_source/scss/web/_header.scss
@@ -25,7 +25,8 @@
 @import "mixins";
 
 header {
-    position: absolute;
+    position: fixed;
+    top: 0;
     z-index: 100000;
     width: 100%;
     background: rgba(0,0,0,0.5);
