Footer copy with <3

--- a/djangodemo/templates/base.html
+++ b/djangodemo/templates/base.html
@@ -40,7 +40,7 @@
 
 <footer class="text-center">
   <div class="row">
-    Copyright © {% now "Y" %} <div class="image logo"></div>. All rights reserved.
+    Coded with love by <div class="image logo"></div> under MIT license.
   </div>
 </footer>
 
